tests/compile-fail/index_wrong_key.ori
// Test that indexing with wrong key type produces a type error
// Spec: 09-expressions.md ยง Index Trait

type Lookup = { data: [int] }

impl Index<int, int> for Lookup {
    @index (self, key: int) -> int = self.data[key];
}

// Wrong key type: str instead of int
#[compile_fail("type mismatch")]
@test_wrong_key () -> void = {
    let l = Lookup { data: [1, 2, 3] };
    let _ = l["hello"];
    ()
}
